--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
     // Android Support
     implementation "com.android.support:support-v4:$support_lib_version"
     implementation "com.android.support:appcompat-v7:$support_lib_version"
@@ -57,28 +64,13 @@ dependencies {
     testImplementation "org.koin:koin-test:$koin_version"
     androidTestImplementation "org.koin:koin-test:$koin_version"
 
-    // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:$android_arch_version"
-    annotationProcessor "android.arch.lifecycle:compiler:$android_arch_version"
-    testImplementation "android.arch.core:core-testing:$android_arch_version"
-
-    // Room
-//    implementation "android.arch.persistence.room:runtime:$android_room_version"
-//    implementation "android.arch.persistence.room:rxjava2:$android_room_version"
-//    kapt "android.arch.persistence.room:compiler:$android_room_version"
-//    annotationProcessor "android.arch.persistence.room:compiler:$android_room_version"
-//    testImplementation "android.arch.persistence.room:testing:$android_room_version"
-
     // Networking
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$retrofit_coroutines_version"
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
-    // Rx
-    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     // UI
@@ -86,5 +78,7 @@ dependencies {
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.2'
+
+    testImplementation "io.mockk:mockk:$mockk_version"
 }
 
