--- a/versions.gradle
+++ b/versions.gradle
@@ -1,7 +1,8 @@
 ext {
     // Kotlin
-    kotlin_version = '1.3.21'
-    koin_version = '2.0.0-beta-1'
+    kotlin_version = '1.3.50'
+    coroutines_version = "1.3.0"
+    koin_version = '2.0.1'
 
     // Android Sdk and tools
     target_sdk_version = 28
@@ -16,6 +17,9 @@ ext {
     // Other frameworks
     okhttp_version = '3.8.1'
     retrofit_version = '2.2.0'
-    rxjava_version = '2.1.7'
+    retrofit_coroutines_version = '0.9.2'
     anko_version='0.10.4'
+
+    // Mockk
+    mockk_version = "1.9"
 }
